# rescue_sim_material

./: .gitmodules  README.md
Fall-Itis/: LICENSE  README.md  costants.py  main.py  robot.json  test.py  utils.py
Fall-Itis/devices/: camera.py  gps.py  robot.py
Fall-Itis/robotics/: controllers.py  pathfinding.py
erebus/: erebus.typ
erebus/docker/: Dockerfile  README.md  run-wayland.sh
erebus/setup/: setup.typ
materiale/: awesome.typ
ros/: run_yolo_api.sh  yolo_api.py
ros/fallitis_ros2/: .gitignore  README.md
ros/fallitis_ros2/scripts/: build_workspace.sh  common_env.sh  install_python_deps.sh  start_controller.sh  start_support_stack.sh
ros/fallitis_ros2/src/fallitis_actuation/: package.xml  setup.cfg  setup.py
ros/fallitis_ros2/src/fallitis_bringup/: package.xml  setup.cfg  setup.py
ros/fallitis_ros2/src/fallitis_bringup/config/: stack.yaml
ros/fallitis_ros2/src/fallitis_bringup/fallitis_bringup/: __init__.py  config.py  sync_controller.py
ros/fallitis_ros2/src/fallitis_bringup/launch/: stack.launch.py
ros/fallitis_ros2/src/fallitis_bringup/resource/: fallitis_bringup
ros/fallitis_ros2/src/fallitis_common/: package.xml  setup.py
ros/fallitis_ros2/src/fallitis_common/fallitis_common/: __init__.py  params.py
ros/fallitis_ros2/src/fallitis_common/resource/: fallitis_common
ros/fallitis_ros2/src/fallitis_mapping/: package.xml  setup.cfg  setup.py
ros/fallitis_ros2/src/fallitis_perception/: package.xml  setup.cfg  setup.py
ros/fallitis_ros2/src/fallitis_robot/: package.xml  setup.cfg  setup.py
(+51 files in other folders)
