<?xml version="1.0"?>
<package format="3">
  <name>fallitis_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the Fall-Itis ROS 2 support stack.</description>
  <maintainer email="sim@localhost">sim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>fallitis_common</exec_depend>
  <exec_depend>fallitis_actuation</exec_depend>
  <exec_depend>fallitis_mapping</exec_depend>
  <exec_depend>fallitis_perception</exec_depend>
  <exec_depend>fallitis_robot</exec_depend>
  <exec_depend>fallitis_web</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
