<?xml version="1.0"?>
<package format="3">
  <name>fallitis_common</name>
  <version>0.1.0</version>
  <description>Shared helpers for Fall-Itis ROS 2 packages.</description>
  <maintainer email="sim@localhost">sim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
